# storage-gateway

./: .gitreview  INSTALL.md  Makefile.am  README.md  build.sh  configure.ac  coverage.sh  cppcheck_rule.txt  storage-gateway.spec
dr_server/: Makefile.am  autoGen.sh  build.sh  configure.ac
dr_server/protos/: common.proto  consumer.proto  writer.proto
dr_server/source/rpc/: common.pb.cc  common.pb.h  consumer.pb.cc  consumer.pb.h  writer.pb.cc  writer.pb.h
dr_server/src/: Makefile.am  consumer_service.cc  rpc_server.cc  writer_service.cc
dr_server/src/include/: consumer_service.h
dr_server/src/protos/: common.proto  consumer.proto  journal.proto  writer.proto
dr_server/src/rpc/: Makefile.am  common.pb.cc  consumer.grpc.pb.cc  consumer.pb.cc  journal.pb.cc  writer.grpc.pb.cc  writer.pb.cc
dr_server/test/: Makefile.am  writer_client.cc
src/backup/: Makefile.am  backup_decorator.cc  backup_mds.cc  backup_mds.h  backup_mgr.cc  backup_mgr.h  backup_proxy.cc  backup_proxy.h  backup_type.h  backup_util.cc  backup_util.h
src/cluster/test/: Makefile.am  cluster.cc
src/dr_server/: Makefile.am  ceph_s3_api.cc  ceph_s3_api.h  ceph_s3_lease.cc  ceph_s3_lease.h  ceph_s3_meta.cc  ceph_s3_meta.h  consumer_service.cc  consumer_service.h  dr_functions.hpp  dr_server.cc  gc_task.cc  gc_task.h  journal_gc_manager.h  journal_lease.h  journal_meta_manager.h  journal_meta_service.h  rpc_server.cc  rpc_server.hpp  writer_service.cc  writer_service.h
src/dr_server/replicate/: dr_pipeline.hpp  rep_client.cc  rep_client.h  rep_ctrl_phase2.hpp  rep_functions.hpp  rep_inner_ctrl.hpp  rep_receiver.cc  rep_receiver.h  rep_receiver_marker.hpp  rep_type.h  rep_volume.hpp  replicate.cc  replicate.h
src/journal/: Makefile.am  cache_recover.cpp  cache_recover.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  control_service.cpp  control_service.h  io_service_pool.cpp  io_service_pool.hpp  journal_entry.cc  journal_entry.cpp  journal_entry.h  journal_entry.hpp  journal_preprocessor.cpp  journal_preprocessor.hpp  journal_reader.cpp  journal_reader.hpp  journal_replayer.cpp  journal_replayer.hpp  journal_writer.cpp  journal_writer.hpp  main.cpp  malloc.c.h  message.hpp  pre_processor.cpp  pre_processor.hpp  replay_entry.hpp  replay_handler.cpp  replay_handler.hpp  replay_manager.cpp  replay_manager.hpp  request_handler.cpp  request_handler.hpp  seq_generator.cpp  seq_generator.hpp  server.cpp  server.hpp  volume.cpp  (+3 more)
src/journal/cache/: Makefile.am  bcache.cpp  bcache.h  cache_proxy.cpp  cache_proxy.h  cache_recover.cpp  cache_recover.h  common.cpp  common.h  jcache.cpp  jcache.h  main.cpp
src/journal/cache_recover/: Makefile.am  cache_recover.cpp  cache_recover.hpp  main.cpp
src/multi-instance/test/: Makefile  Makefile.am  multi-instance.cc  simple_callback.h
src/rpc/: Makefile.am  common.pb.cc  common.pb.h  journal.pb.cc  journal.pb.h  writer.pb.cc  writer.pb.h
src/rpc/clients/: backup_ctrl_client.h  backup_inner_ctrl_client.h  backup_rpccli.cc  backup_rpccli.h  control_client.hpp  lease_rpc_client.h  replayer_client.cpp  replayer_client.h  replayer_client.hpp  replicate_ctrl_client.hpp  replicate_inner_ctrl_client.h  rpc_client.cc  rpc_client.h  snapshot_ctrl_client.h  snapshot_inner_ctrl_client.h  snapshot_rpccli.cc  snapshot_rpccli.h  volume_ctrl_client.h  writer_client.h  (+2 more)
src/sg_client/: Makefile.am  client_socket.cc  client_socket.h  connection.cc  connection.h  control_service.cc  control_service.h  epoll_event.h  io_service_pool.cc  io_service_pool.h  journal_entry.cc  journal_entry.h  journal_marker.cc  journal_marker.h  journal_preprocessor.cc  journal_preprocessor.h  journal_reader.cc  journal_reader.h  journal_replayer.cc  journal_replayer.h  journal_type.h  journal_writer.cc  journal_writer.h  main.cc  message.h  perf_counter.cc  perf_counter.h  replicate_control.cc  replicate_control.h  replicate_proxy.cc  replicate_proxy.h  replication_control.cc  replication_control.h  seq_generator.cc  seq_generator.h  server.cc  server.h  server_socket.cc  server_socket.h  snapshot_control.cc  (+7 more)
src/sg_server/: Makefile.am  ceph_s3_api.cc  ceph_s3_api.h  ceph_s3_lease.cc  ceph_s3_lease.h  ceph_s3_meta.cc  ceph_s3_meta.h  consumer_interface.h  consumer_service.cc  consumer_service.h  dr_functions.h  dr_server.cc  gc_task.cc  gc_task.h  i_replayer.h  journal_gc_manager.h  journal_meta_manager.h  lease_rpc_service.cc  lease_rpc_service.h  lru_cache.h  replayer_context.h  sg_util.h  snap_client_wrapper.h  snap_reader.h  volume_inner_control.cc  volume_inner_control.h  volume_meta_manager.h  writer_service.cc  writer_service.h
src/snapshot/: Makefile.am  abstract_mds.cc  abstract_mds.h  backup_mds.cc  backup_mds.h  backup_type.h  backup_util.cc  block_store.cpp  index_store.cpp  index_store.h  isnapshot.h  isyncbarrier.h  itransaction.h  snapshot_facade.cc  snapshot_facade.h  snapshot_fecade.cc  snapshot_fecade.h  snapshot_mds.cc  snapshot_mds.cpp  snapshot_mds.h  snapshot_mgr.cc  snapshot_mgr.cpp  snapshot_mgr.h  snapshot_proxy.cc  snapshot_proxy.cpp  snapshot_proxy.h  snapshot_type.h  snapshot_util.cc  snapshot_util.h  snapshot_vol.cc  snapshot_vol.h
src/test/: Makefile.am  backup_client.cc  control_client.cc  control_client.cpp  debug_client.cc  grpc_test.cc  sg_tool.cc  snapshot_client.cc  test.cc  writer_client.cc
test/: Makefile.am  debug_client.cc  journal_meta_utils.cc  libs3_utils.cc
test/auto/: Makefile  aggregate-results.sh  replicate.sh  sg_deploy.sh  sg_env.sh  sg_functions.sh  sg_io.sh  sg_services.sh  sg_test.sh  start.sh  t0001-deploy.sh  t0002-start-sg-processes.sh  t1001-enable-volume.sh  t4005-failover-replication-with-master-alive.sh  t4100-create-replication.sh  t4101-replicate-io.sh  t4200-disable-replication.sh  t4300-enable-replication.sh  t4400-failover-replication-with-alive-master.sh  t4500-reverse-replication.sh  t4600-enable-replication-after-reverse.sh  t4700-disable-replication-before-delete.sh  t4800-delete-replication.sh  t9002-disable-volume.sh  t9003-stop-sg-processes.sh  volume.sh
test/unit_test/: Makefile.am
(+287 files in other folders)
